working on bug new post see description
section notes:
on mobile newpost keyboard popup pushes it up too far

--- a/public/css/posts.css
+++ b/public/css/posts.css
@@ -64,7 +64,7 @@ form {
 }
 
 #popup_container_form {
-	padding-top: 70px; 
+	margin-top: 10%;
 	width: 100%;
 	height: 100%;
 	opacity: .95;
